[metadata]
name = NetSym
description = The open source network simulation
author = Tomer Noyman
;license = MIT
;license_file = LICENSE
platforms = win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    NetSym
install_requires =
    pyglet>=1.5.2
    pyWinhook>=1.6.2
python_requires = >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
NetSym = py.typed

[flake8]
max-line-length = 160